// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DeviceClassSelector > should match snapshot with deterministic props 1`] = `
<div
  class="flex flex-col gap-4"
>
  <div
    class="flex items-center gap-2 font-semibold text-xl text-zinc-900 dark:text-white"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-tablet-smartphone h-5 w-5 text-zinc-900 dark:text-white"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        height="14"
        rx="2"
        width="10"
        x="3"
        y="8"
      />
      <path
        d="M5 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v16a2 2 0 0 1-2 2h-2.4"
      />
      <path
        d="M8 18h.01"
      />
    </svg>
    Your device
  </div>
  <div
    class="test-class"
    data-testid="device-class-selector"
    data-value="2"
  />
</div>
`;

exports[`DeviceClassSelector > should match snapshot with different device class values > device-class-1 1`] = `
<div
  class="flex flex-col gap-4"
>
  <div
    class="flex items-center gap-2 font-semibold text-xl text-zinc-900 dark:text-white"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-tablet-smartphone h-5 w-5 text-zinc-900 dark:text-white"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        height="14"
        rx="2"
        width="10"
        x="3"
        y="8"
      />
      <path
        d="M5 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v16a2 2 0 0 1-2 2h-2.4"
      />
      <path
        d="M8 18h.01"
      />
    </svg>
    Your device
  </div>
  <div
    class=""
    data-testid="device-class-selector"
    data-value="1"
  />
</div>
`;

exports[`DeviceClassSelector > should match snapshot with different device class values > device-class-2 1`] = `
<div
  class="flex flex-col gap-4"
>
  <div
    class="flex items-center gap-2 font-semibold text-xl text-zinc-900 dark:text-white"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-tablet-smartphone h-5 w-5 text-zinc-900 dark:text-white"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        height="14"
        rx="2"
        width="10"
        x="3"
        y="8"
      />
      <path
        d="M5 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v16a2 2 0 0 1-2 2h-2.4"
      />
      <path
        d="M8 18h.01"
      />
    </svg>
    Your device
  </div>
  <div
    class=""
    data-testid="device-class-selector"
    data-value="2"
  />
</div>
`;

exports[`DeviceClassSelector > should match snapshot with different device class values > device-class-3 1`] = `
<div
  class="flex flex-col gap-4"
>
  <div
    class="flex items-center gap-2 font-semibold text-xl text-zinc-900 dark:text-white"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-tablet-smartphone h-5 w-5 text-zinc-900 dark:text-white"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        height="14"
        rx="2"
        width="10"
        x="3"
        y="8"
      />
      <path
        d="M5 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v16a2 2 0 0 1-2 2h-2.4"
      />
      <path
        d="M8 18h.01"
      />
    </svg>
    Your device
  </div>
  <div
    class=""
    data-testid="device-class-selector"
    data-value="3"
  />
</div>
`;

exports[`DeviceClassSelector > should match snapshot with different device class values > device-class-4 1`] = `
<div
  class="flex flex-col gap-4"
>
  <div
    class="flex items-center gap-2 font-semibold text-xl text-zinc-900 dark:text-white"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-tablet-smartphone h-5 w-5 text-zinc-900 dark:text-white"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        height="14"
        rx="2"
        width="10"
        x="3"
        y="8"
      />
      <path
        d="M5 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v16a2 2 0 0 1-2 2h-2.4"
      />
      <path
        d="M8 18h.01"
      />
    </svg>
    Your device
  </div>
  <div
    class=""
    data-testid="device-class-selector"
    data-value="4"
  />
</div>
`;
